# robot_data_pipeline_pkg

./: CMakeLists.txt  README.md  package.xml  robotGuide_1.xml
NetworkLib/: Readme.md
NetworkLib/DataNetworking/: DataAgent.cpp  DataAgent.h  DataClient.cpp  DataClient.h  DataFrame.h  DataHost.cpp  DataHost.h  DataType.h
NetworkLib/aris/: aris_core_msg.cpp  aris_core_msg.h
include/: data_trans.cpp  data_trans.h  log_lib.h
include/eigen_lib/: eigen_lib.h  transform.h
msg/: RobotCmd.msg  RobotState.msg
src/: pub_node_test.cpp  robot_state_pub_node.cpp  robot_state_sub_node.cpp  sub_node_test.cpp
